[package]
name = "amica-premium-api"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4"
anyhow = "1.0"
env_logger = "0.10.0"
moka = "0.10.0"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.15"
serde = { version = "1.0", features = ["derive"] }
